docs: improve docs for new flags and image variants